--- a/index.html
+++ b/index.html
@@ -166,38 +166,38 @@
               </div>
          </div>
          <div class="container">
-             <p>Putting some unreleased Spuqk tracks here... Release versions will come hopefully soon - if I find time :(.</p>
+             <p class="fun">Putting some unreleased Spuqk tracks here... Release versions will come hopefully soon - if I find time :(.</p>
          </div>
          <div class="container">
-             <ul>We</ul>
+             <ul class="fun">We</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1650185892%3Fsecret_token%3Ds-TerG8ulCwcz&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
                  style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                  <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/we-1/s-TerG8ulCwcz" title="we" target="_blank" style="color: #cccccc; text-decoration: none;">we</a>
               </div>
-             <ul>Dazed and Confused</ul>
+             <ul class="fun">Dazed and Confused</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1649438364%3Fsecret_token%3Ds-KubUsNoHBPN&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
                  </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                      <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a>·
                  <a href="https://soundcloud.com/spuqk/dazed-and-confused-1/s-KubUsNoHBPN" title="dazed and confused" target="_blank" style="color: #cccccc; text-decoration: none;">dazed and confused</a></div>
-             <ul>Metanoia</ul>
+             <ul class="fun">Metanoia</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1649188542%3Fsecret_token%3Ds-Vl9gQb3BjTg&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
                  style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                      <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/agnosthesia/s-Vl9gQb3BjTg" title="metanoia" target="_blank" style="color: #cccccc; text-decoration: none;">metanoia</a></div>
-             <ul>Solution Explorer</ul>
+             <ul class="fun">Solution Explorer</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1646026050%3Fsecret_token%3Ds-sOqMkpQHJ7E&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
              <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                  <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a>·
                  <a href="https://soundcloud.com/spuqk/slaps/s-sOqMkpQHJ7E" title="solution explorer" target="_blank" style="color: #cccccc; text-decoration: none;">solution explorer</a></div>
-             <ul>Here</ul>
+             <ul class="fun">Here</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1572319300%3Fsecret_token%3Ds-A4mcZY8qPb9&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
                  style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                      <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/here/s-A4mcZY8qPb9" title="Here" target="_blank" style="color: #cccccc; text-decoration: none;">Here</a></div>
-             <ul>Psychopomp</ul>
+             <ul class="fun">Psychopomp</ul>
              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1522126309%3Fsecret_token%3Ds-dt7h6Fhn3nK&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
              <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
