--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Jack Alexander Cooper CS AI Machine Learning">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Cooper - Personal Website</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/util/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="script.js"></script>
