--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
               <div class="container">
                       <ul>Programming Projects
                           <li class="bold"><a href="https://github.com/Jack-A-Cooper/WonderLoom" target="_blank">Wonderloom</a> | Python</li>
-                          <p class="center-align">WonderLoom is envisioned as a companion tool that helps inspire imagination and spark creativity. A core concern of world building is contextual continuity while playing with friends or an AI Language Model (such as ChatGPT), 
+                          <p class="left-align">WonderLoom is envisioned as a companion tool that helps inspire imagination and spark creativity. A core concern of world building is contextual continuity while playing with friends or an AI Language Model (such as ChatGPT), 
                                and this concept stays central in development efforts. Through contemporary frameworks and tools, the project aims to tackle the issue of world tracking in text-based game management and play. One can only go so far with world 
                                building and interacting before details become muddied and concret tracking falls by the wayside. Or worse, the imagined story teller never bothered to remember your inventory's contents. A core component of WonderLoom's goal 
                                is to serve as this tool; to help facilitate world data capture with ease. By utilizing such means as an ORM database backed with PostgreSQL 
                                and powered through Python, organizing and utilizing data will no longer be an arduous chore. Players, world-builders, dreamers, and dataphiles alike may take advantage of the tool to focus on the aspects they enjoy most.
                             </p>
                           <li class="bold"><a href="https://github.com/Jack-A-Cooper/coa-generator" target="_blank">Coat of Arms Generator (COA Gen)</a> | Python</li>
-                          <p class="center-align">A tool to create personalized coats of arms with historical heraldic rules. Leveraging machine learning and neural networks trained to create highly detailed, unique, and correct coat of arms. Also incorporates handy scripts for project development
+                          <p class="left-align">A tool to create personalized coats of arms with historical heraldic rules. Leveraging machine learning and neural networks trained to create highly detailed, unique, and correct coat of arms. Also incorporates handy scripts for project development
                               and organization.
                               </p>
                           </ul>
                       <ul>Research and Development Projects
                           <li class="bold">Stable Diffusion Training and Research | Various</li>
-                          <p class="center-align">Conducting research into Stable Diffusion and image generation techniques.
+                          <p class="left-align">Conducting research into Stable Diffusion and image generation techniques.
                             </p>
                       </ul>
                       <ul>Creative Projects
                           <li class="bold">Game Design Research and Design | Various</li>
-                          <p class="center-align">Conducting research into developing nuanced game design techniques, mechanics, and overall design.
+                          <p class="left-align">Conducting research into developing nuanced game design techniques, mechanics, and overall design.
                               </p>
                           <li class="bold">Worldbuilding Project (Early Original Work) | Various</li>
-                          <p class="center-align">Worldbuilding project I am working on with the collaboration with my best friend. Still too early to reveal too much, but utilizing current tools and technologies to help flesh out the world and bring it to life on paper and through AI image generatoin. Of course this is
+                          <p class="left-align">Worldbuilding project I am working on with the collaboration with my best friend. Still too early to reveal too much, but utilizing current tools and technologies to help flesh out the world and bring it to life on paper and through AI image generatoin. Of course this is
                               in tandem with good ol' drafting, testing, and tons of necessary brainstorming!
                               </p>
                         </ul>
@@ -170,15 +170,15 @@
              <div class="container">
                   <ul>Programming Projects
                       <li class="bold"><a href="https://github.com/Jack-A-Cooper/PokerCore" target="_blank">Pokercore</a> | C++ (Open Source)</li>
-                      <p class="center-align">Implemented a C++ class-based module implementation of a 5-hand poker hand evaluator based on a bitwise algorithm. Evolved to become a sophisticated program with other modules now 
+                      <p class="left-align">Implemented a C++ class-based module implementation of a 5-hand poker hand evaluator based on a bitwise algorithm. Evolved to become a sophisticated program with other modules now 
                           (such as implementing file validation [additional module], GoogleTest [testing suite], and CMake [build/compilation]). 
                           A major inspiration for this project was reading Jonathan Hsiao's blog post about a bitwise algorithm to evaluate 5-hand poker hands I found very interesting. The original algorithm was implemented by Pat Wilson in JavaScript (2012).
                           </p>
                      <li class="bold"><a href="https://github.com/Jack-A-Cooper/Agar.io-Behavior-Tree-Bots" target="_blank">Agar.io-Behavior-Tree-Bots Fork</a> | JavaScript (Open Source)</li>
-                      <p class="center-align">Redesigns and improves Ogar3's AI bots by utilizing a behavior tree system.
+                      <p class="left-align">Redesigns and improves Ogar3's AI bots by utilizing a behavior tree system.
                          </p>
                      <li>Pintos OS CPU Scheduluer | C</li>
-                     <p class="center-align">This implementation features a round-robin CPU scheduling algorithm enhanced with priority-based preemption to prevent deadlocks. It leverages multithreading to apply core principles of concurrency, ensuring efficient task management and execution.
+                     <p class="left-align">This implementation features a round-robin CPU scheduling algorithm enhanced with priority-based preemption to prevent deadlocks. It leverages multithreading to apply core principles of concurrency, ensuring efficient task management and execution.
                          </p>
                      <li class="bold">Helpful Automation Scripts | Python</li>
                      <p>Various light-weight python scripts that I have written to help me perform numerous tasks, ranging from directory organization to directory tree visualization. I plan to clean them up eventually and share them as open source scripts for anyone to use or build off from.</p>
@@ -197,7 +197,7 @@
               </div>
          </div>
          <div class="container">
-             <p>Putting some unreleased Spuqk Wubs here. You found them!</p>
+             <p class="fun" class="left-align">Putting some unreleased Spuqk Wubs here. You found them!</p>
          </div>
          <div class="container">
                  <div class="animate-characters-2">Track List:</div>
