--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               </div>
          </div>
          <div class="container">
-             <p class="fun-look">Putting some unreleased Spuqk Wubs here. You found them!</p>
+             <p class="fun-look" class="fun-look-background">Putting some unreleased Spuqk Wubs here. You found them!</p>
          </div>
          <div class="container">
                  <div class="animate-characters-2">Track List:</div>
