--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </svg>
                 </div>
               <div class="container">
-                      <ul>Programming Projects
+                      <ul class="bold">Programming Projects
                           <li class="bold"><a href="https://github.com/Jack-A-Cooper/WonderLoom" target="_blank">Wonderloom</a> | Python</li>
                           <p class="left-align">WonderLoom is envisioned as a companion tool that helps inspire imagination and spark creativity. A core concern of world building is contextual continuity while playing with friends or an AI Language Model (such as ChatGPT), 
                                and this concept stays central in development efforts. Through contemporary frameworks and tools, the project aims to tackle the issue of world tracking in text-based game management and play. One can only go so far with world 
@@ -144,12 +144,12 @@
                               and organization.
                               </p>
                           </ul>
-                      <ul>Research and Development Projects
+                      <ul class="bold">Research and Development Projects
                           <li class="bold">Stable Diffusion Training and Research | Various</li>
                           <p class="left-align">Conducting research into Stable Diffusion and image generation techniques.
                             </p>
                       </ul>
-                      <ul>Creative Projects
+                      <ul class="bold">Creative Projects
                           <li class="bold">Game Design Research and Design | Various</li>
                           <p class="left-align">Conducting research into developing nuanced game design techniques, mechanics, and overall design.
                               </p>
@@ -168,7 +168,7 @@
                     </svg>
                 </div>
              <div class="container">
-                  <ul>Programming Projects
+                  <ul class="bold">Programming Projects
                       <li class="bold"><a href="https://github.com/Jack-A-Cooper/PokerCore" target="_blank">Pokercore</a> | C++ (Open Source)</li>
                       <p class="left-align">Implemented a C++ class-based module implementation of a 5-hand poker hand evaluator based on a bitwise algorithm. Evolved to become a sophisticated program with other modules now 
                           (such as implementing file validation [additional module], GoogleTest [testing suite], and CMake [build/compilation]). 
@@ -177,9 +177,9 @@
                      <li class="bold"><a href="https://github.com/Jack-A-Cooper/Agar.io-Behavior-Tree-Bots" target="_blank">Agar.io-Behavior-Tree-Bots Fork</a> | JavaScript (Open Source)</li>
                       <p class="left-align">Redesigns and improves Ogar3's AI bots by utilizing a behavior tree system.
                          </p>
-                     <li>Pintos OS CPU Scheduluer | C</li>
+                     <li class="bold">Pintos OS CPU Scheduluer | C</li>
                      <p class="left-align">This implementation features a round-robin CPU scheduling algorithm enhanced with priority-based preemption to prevent deadlocks. It leverages multithreading to apply core principles of concurrency, ensuring efficient task management and execution.
-                         </p>
+                    </p>
                      <li class="bold">Helpful Automation Scripts | Python</li>
                      <p>Various light-weight python scripts that I have written to help me perform numerous tasks, ranging from directory organization to directory tree visualization. I plan to clean them up eventually and share them as open source scripts for anyone to use or build off from.</p>
                  </ul>
