--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="script.js"></script>
-<body id="body">
+<body id="body" class="body-home">
     <header>
         <h1 class="animate-characters">Jack Alexander Cooper</h1>
         <!-- Toggle Nav Menu -->
