--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
      <!-- About -->
      <div id="about" class="section" style="display: none;">
          <div class="container">
-             <h1>About Me!</h1>
+             <h1 class="landing-page">About Me!</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
                     <line x1="0" y1="10" x2="100%" y2="10" />
@@ -104,7 +104,7 @@
      <!-- Demos -->
      <div id="demos" class="section" style="display: none;">
          <div class="container">
-             <h1>Project Demos</h1>
+             <h1 class="landing-page">Project Demos</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
                     <line x1="0" y1="10" x2="100%" y2="10" />
@@ -116,7 +116,7 @@
      <!-- Projects -->
      <div id="projects" class="section" style="display: none;">
          <div class="container">
-             <h1>Projects</h1>
+             <h1 class="landing-page">Projects</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
                     <line x1="0" y1="10" x2="100%" y2="10" />
@@ -189,7 +189,7 @@
     <!-- Music -->
      <div id="music" class="section" style="display: none;">
          <div class="container">
-             <h1>Music (Spuqk)</h1>
+             <h1 class="landing-page">Music (Spuqk)</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
                     <line x1="0" y1="10" x2="100%" y2="10" />
@@ -241,7 +241,7 @@
      <!-- Blog -->
      <div id="blog" class="section" style="display: none;">
          <div class="container">
-             <h1>Personal Blog</h1>
+             <h1 class="landing-page">Personal Blog</h1>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
                         <line x1="0" y1="10" x2="100%" y2="10" />
@@ -253,7 +253,7 @@
      <!-- Contact Me -->
      <div id="contact" class="section" style="display: none;">
          <div class="container">
-            <h1>Contact Me</h1>
+            <h1 class="landing-page">Contact Me</h1>
                 <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
