--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                           <img src="/images/content/BBY_workflow.png" alt="Photo 1">
                   </div>
                   <div class="photo-row">
-                          <img src="/images/Me/System Design Chart - Amazon Product Concept.png" alt="Photo 2">
+                          <img src="/images/content/System Design Chart - Amazon Product Concept.png" alt="Photo 2">
                   </div>
          </div>
      </div>
