--- a/index.html
+++ b/index.html
@@ -210,10 +210,7 @@
               </div>
          </div>
          <div class="container">
-             <p class="fun-look" class="fun-look-background">Putting some unreleased Spuqk Wubs here. You found them!</p>
-         </div>
-         <div class="container">
-                 <div class="animate-characters-2">Track List:</div>
+                 <div class="animate-characters-2">Track List (unreleased):</div>
                  <ul>
                      <li class="animate-characters">We</li>
                      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
